# llm-factory-pattern

./: .env.example  .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
src/: __init__.py  config_models.py  exceptions.py  main.py  model_factory.py
src/model_config/: __init__.py  claude_sonnet_3_7.yaml  gpt_4o.yaml  llama_3_8b_instruct.yaml
src/models/: __init__.py  base_model.py  bedrock.py  openai.py
